--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -15,8 +15,8 @@ import {
       <a href="/"
         ><img
           class="h-12 w-11"
-          src="/public/rizz/logo2.png"
-          alt=""
+          src="/rizz/logo2.png"
+          alt="Logo"
         /></a
       >
       <div class="block md:hidden"><MenuIcon class="w-4 h-4 text-white" /></div>
