--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -24,7 +24,7 @@ import {
     <MenuItems class="hidden lg:flex">
       <ul class="flex flex-col lg:flex-row lg:gap-5">
         <li>
-         
+         <a  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><h1 class="text-red-500">Don't</h1> click here 💥</a> 
         </li>
       
       </ul>
