Added new features .

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,30 @@ const name = "sharriy";
     <div class="text-center text-xl text-gray-300"><span id="typed"></span></div>
   </div>
 
-  
+  <div class="flex flex-col md:flex-row mt-20">
+      <div class="min-w-[50%] flex flex-col justify-center items-center text-center p-6">
+        <h1 class="text-6xl mb-0">
+          Deploy faster<span class="gradient-text"> with Luvica 🎊</span>
+        </h1>
+        <br>
+        <p class="text-2xl text-gray3">
+          Luvica is a
+          <img-reveal src="/img/speed.gif"><span class="text-yellow-500 font-bold">blazingly fast</span></img-reveal>
+          &amp;&amp;
+          <img-reveal src="/img/cat.gif"><span class="text-pink-500 font-bold">highly-scalable</span></img-reveal>
+          way to level up your cloud platform
+        </p>
+
+
+      </div>
+
+      <div class="flex w-full relative items-center justify-center">
+        <div class="w-full mx-auto md:bg-[url('/img/tv.png')] bg-no-repeat bg-cover md:w-[500px] md:max-w-[700px] md:min-h-[300px] mt-20 md:mt-0">
+            <img class="md:w-[330px] md:h-[285px] relative md:left-[48px] md:top-[54px] mx-auto md:mx-0 w-full aspect-video" src="/images/cloudd.png" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></img>
+        </div>
+
+      </div>
+    </div>
 
 <!-- CTA / HARDTRUTH -->
 <div class="dmin-h-screen flex flex-col justify-center items-center mt-16">
@@ -73,14 +96,17 @@ const name = "sharriy";
 </div>
 
 <!-- CTA -->
-<div class="dmin-h-screen flex flex-col justify-center items-center mt-16">
+<!-- CTA -->
+<div class="flex flex-col justify-center items-center mt-16">
   <button
+    id="confetti-button"
     data-aos="fade-right"
     class="px-6 py-3 text-6xl font-bold bg-purple-600 text-white rounded-xl shadow-xl"
   >
     LET'S SHIP IT 🚀
   </button>
 </div>
+
 
 <!-- SOCIAL FOOTER -->
 <div class="mt-20 flex flex-col justify-center items-center text-white">
