--- a/src/Layout/Mainlayout.astro
+++ b/src/Layout/Mainlayout.astro
@@ -22,6 +22,7 @@ const { title, seoTitle, seoDesc } = Astro.props;
     <!-- Local Scripts -->
     <script src="/scripts/hero-typed.js" defer></script>
     <script src="/scripts/terminal.js" defer></script>
+    <script src="/scripts/confetti.js" type="module"></script>
   </head>
 
   <body class="bg-black text-white grid gap-0" style="font-family: 'Pixelify Sans', sans-serif; min-height: 100vh;">
