Added new features new 2

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -34,7 +34,7 @@ import {
     <MenuItems class="hidden lg:flex">
   <ul class="flex flex-col lg:flex-row lg:gap-1 text-center">
   <li class="w-full"> <!-- tweak this value -->
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="text-red-500">
+    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" class="text-red-500">
       <span class="font-bold">Don't</span>  
       <span class="text-white">Click</span>
       <span class="text-white">Here</span>
