--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,13 +39,13 @@ const name = "sharriy";
   <div class="flex flex-col md:flex-row mt-20">
       <div class="min-w-[50%] flex flex-col justify-center items-center text-center p-6">
         <h1 class="text-6xl mb-0">
-          Deploy faster<span class="gradient-text"> with Luvica 🎊</span>
-        </h1>
+      Orchestrate smarter<span class="gradient-text"> with Me!! 🤖 🎊</span>
+    </h1>
         <br>
         <p class="text-2xl text-gray3">
-          Luvica is a
-          <img-reveal src="/img/speed.gif"><span class="text-yellow-500 font-bold">blazingly fast</span></img-reveal>
-          &amp;&amp;
+           
+          <img-reveal src="/img/speed.gif"><span class="text-yellow-500 font-bold">blazingly fast deployments </span></img-reveal>
+          &amp;
           <img-reveal src="/img/cat.gif"><span class="text-pink-500 font-bold">highly-scalable</span></img-reveal>
           way to level up your cloud platform
         </p>
@@ -55,7 +55,7 @@ const name = "sharriy";
 
       <div class="flex w-full relative items-center justify-center">
         <div class="w-full mx-auto md:bg-[url('/img/tv.png')] bg-no-repeat bg-cover md:w-[500px] md:max-w-[700px] md:min-h-[300px] mt-20 md:mt-0">
-            <img class="md:w-[330px] md:h-[285px] relative md:left-[48px] md:top-[54px] mx-auto md:mx-0 w-full aspect-video" src="/images/cloudd.png" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></img>
+            <img class="size-30" src="/images/cloudd.png" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></img>
         </div>
 
       </div>
